--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 async-generator==1.10
+async-timeout==4.0.2
 attrs==22.1.0
 beautifulsoup4==4.11.1
 certifi==2022.6.15
@@ -9,10 +10,13 @@ click==8.1.3
 colorama==0.4.5
 cryptography==37.0.4
 cycler==0.11.0
+decorator==5.1.1
+Deprecated==1.2.13
 Flask==2.2.1
 fonttools==4.34.4
 gunicorn==20.1.0
 h11==0.13.0
+handler==1.3.0
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -39,14 +43,16 @@ pyperclip==1.8.2
 PyRect==0.2.0
 PyScreeze==0.1.28
 PySocks==1.7.1
-pyTelegramBotAPI==4.6.1
+pyTelegramBotAPI==2.2.3
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytweening==1.0.4
 pytz==2022.1
 pywhatkit==5.4
+redis==4.3.4
 regex==2022.7.25
 requests==2.28.1
+rq==1.11.0
 scikit-learn==1.1.1
 scipy==1.8.1
 seaborn==0.11.2
@@ -64,5 +70,6 @@ trio-websocket==0.9.2
 urllib3==1.26.11
 Werkzeug==2.2.1
 wikipedia==1.4.0
+wrapt==1.14.1
 wsproto==1.1.0
 XLML==0.1.2
