--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+asttokens==2.0.7
 async-generator==1.10
 async-timeout==4.0.2
 attrs==22.1.0
+backcall==0.2.0
 beautifulsoup4==4.11.1
+bottle==0.12.23
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
@@ -10,32 +13,50 @@ click==8.1.3
 colorama==0.4.5
 cryptography==37.0.4
 cycler==0.11.0
-decorator==5.1.1
+decorator==4.4.2
 Deprecated==1.2.13
+distlib==0.3.5
+executing==0.10.0
+filelock==3.8.0
 Flask==2.2.1
 fonttools==4.34.4
 gunicorn==20.1.0
 h11==0.13.0
 handler==1.3.0
 idna==3.3
+imageio==2.21.1
+imageio-ffmpeg==0.4.7
+ipython==8.4.0
 itsdangerous==2.1.2
+jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.1.0
 kiwisolver==1.4.4
 lxml==4.9.1
 MarkupSafe==2.1.1
+matlablib==1.3
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
 MouseInfo==0.1.3
+moviepy==1.0.3
+mysql-connector-python==8.0.30
 nltk==3.7
 numpy==1.23.1
 outcome==1.2.0
 packaging==21.3
 pandas==1.4.3
+parso==0.8.3
+pickleshare==0.7.5
 Pillow==9.2.0
+platformdirs==2.5.2
+proglog==0.1.10
+prompt-toolkit==3.0.30
+protobuf==3.20.1
+pure-eval==0.2.2
 PyAutoGUI==0.9.53
 pycparser==2.21
 PyGetWindow==0.0.9
+Pygments==2.12.0
 PyMsgBox==1.0.9
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
@@ -61,6 +82,7 @@ six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
+stack-data==0.4.0
 telebot==0.0.4
 threadpoolctl==3.1.0
 tqdm==4.64.0
@@ -68,8 +90,12 @@ traitlets==5.3.0
 trio==0.21.0
 trio-websocket==0.9.2
 urllib3==1.26.11
+virtualenv==20.16.3
+wcwidth==0.2.5
 Werkzeug==2.2.1
 wikipedia==1.4.0
+windows-curses==2.3.0
+Wrapper==1.1.0b1
 wrapt==1.14.1
 wsproto==1.1.0
 XLML==0.1.2
