--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asttokens==2.0.7
+asttokens==2.0.8
 async-generator==1.10
 async-timeout==4.0.2
 attrs==22.1.0
@@ -8,18 +8,18 @@ bottle==0.12.23
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
-chromedriver-binary==104.0.5112.79.0
+chromedriver-binary==105.0.5195.19.0
 click==8.1.3
 colorama==0.4.5
 cryptography==37.0.4
 cycler==0.11.0
-decorator==4.4.2
+decorator==5.1.1
 Deprecated==1.2.13
 distlib==0.3.5
 executing==0.10.0
 filelock==3.8.0
-Flask==2.2.1
-fonttools==4.34.4
+Flask==2.2.2
+fonttools==4.35.0
 gunicorn==20.1.0
 h11==0.13.0
 handler==1.3.0
@@ -34,14 +34,14 @@ joblib==1.1.0
 kiwisolver==1.4.4
 lxml==4.9.1
 MarkupSafe==2.1.1
-matlablib==1.3
+matlablib==3.5.3
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
 MouseInfo==0.1.3
 moviepy==1.0.3
 mysql-connector-python==8.0.30
 nltk==3.7
-numpy==1.23.1
+numpy==1.23.2
 outcome==1.2.0
 packaging==21.3
 pandas==1.4.3
@@ -51,12 +51,12 @@ Pillow==9.2.0
 platformdirs==2.5.2
 proglog==0.1.10
 prompt-toolkit==3.0.30
-protobuf==3.20.1
+protobuf==4.21.5
 pure-eval==0.2.2
 PyAutoGUI==0.9.53
 pycparser==2.21
 PyGetWindow==0.0.9
-Pygments==2.12.0
+Pygments==2.13.0
 PyMsgBox==1.0.9
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
@@ -64,20 +64,21 @@ pyperclip==1.8.2
 PyRect==0.2.0
 PyScreeze==0.1.28
 PySocks==1.7.1
-pyTelegramBotAPI==4.3.1
+pyTelegramBotAPI==4.7.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytweening==1.0.4
-pytz==2022.1
+pytz==2022.2.1
 pywhatkit==5.4
 redis==4.3.4
 regex==2022.7.25
 requests==2.28.1
 rq==1.11.0
-scikit-learn==1.1.1
-scipy==1.8.1
+scikit-learn==1.1.2
+scipy==1.9.0
 seaborn==0.11.2
-selenium==4.3.0
+setuptools==65.0.1
+selenium==4.4.0
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
@@ -92,7 +93,7 @@ trio-websocket==0.9.2
 urllib3==1.26.11
 virtualenv==20.16.3
 wcwidth==0.2.5
-Werkzeug==2.2.1
+Werkzeug==2.2.2
 wikipedia==1.4.0
 wrapt==1.14.1
 wsproto==1.1.0
